# yolov11-raspberrypi-ncnn

./: CMakeLists.txt  Custom_YoloModel_Trainer.ipynb  LICENSE  README.md
data/calib_imgs/: calib_list.txt
data/models/: model-int8.param  model-opt.param  model.ncnn.param  model.table
src/: yolo11.cpp
